k8s.bak/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: my-namespace
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30500 # You can change this port if needed (range: 30000–32767)
